updated the modules with comments and readme

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,29 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Necessary imports\n",
+    "from src import plotting\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "\n",
-    "# Settings\n",
-    "A = 6  # Want figures to be A6\n",
-    "plt.rc('figure', figsize=[46.82 * .5**(.5 * A), 33.11 * .5**(.5 * A)])\n",
-    "plt.rc('text', usetex=True)\n",
-    "plt.rc('font', family='serif')\n",
-    "\n",
-    "# Create some data\n",
-    "x = np.arange(10)\n",
-    "y = x**2\n",
-    "\n",
-    "# Plot\n",
-    "plt.plot(x, y, label=r'Dataset 1: R = t²')\n",
-    "plt.title(r'\\LaTeX\\ in Labels')\n",
-    "plt.xlabel(r'Time, $t$ [\\textmu s]')\n",
-    "plt.text(7, 70, r'$R = t^2$')\n",
-    "plt.legend(fontsize=8)"
+    "import matplotlib.patches\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Prepare the plots for latex\n",
+    "plotting.prepare_for_latex()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Histogram"
    ]
   },
   {
@@ -32,17 +47,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "plt.rc('text.latex', preamble=r'\\usepackage{textgreek}')\n",
-    "\n",
-    "# Plot\n",
-    "plt.plot(x, y, label=r'Dataset 1: R = t²')\n",
-    "plt.title(r'\\LaTeX\\ in Labels')\n",
-    "plt.xlabel(r'Time, $t$ [\\textmu s]')\n",
-    "plt.ylabel(r'Resistance, $R$ [\\textOmega]')\n",
-    "plt.text(7, 70, r'$R = t^2$')\n",
-    "plt.legend(fontsize=8)"
+    "# Line plot"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Line plot + Scatter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
